test/preprocessor/invalid/version-unknown.glsl.err.ref
Error in preprocessor/invalid/version-unknown.glsl(1, 13): Invalid profile string
